<resources>
    <string name="app_name">DesafioDimensa</string>

    <string name="splash_activity_log_tag">SplashActivity</string>
    <string name="splash_activity_log_message">Inicializando componentes</string>

    <string name="movie_home_fragment_log_tag">MovieHomeFragment</string>
    <string name="movie_home_fragment_log_message">Inicializando componentes</string>

    <string name="movie_home_view_model_log_tag">MovieHomeViewModel</string>
    <string name="movie_home_view_model_log_data_message">Dados recebidos: </string>
    <string name="movie_home_view_model_log_error_message">Erro ao buscar filmes: </string>

    <string name="movie_detail_fragment_log_tag">MovieDetailFragment</string>
    <string name="movie_detail_fragment_log_message">Inicializando componentes</string>
    <string name="movie_detail_fragment_base_image_url">https://image.tmdb.org/t/p/w500</string>
    <string name="movie_detail_fragment_vote_average">/10 média de votos</string>
    <string name="movie_detail_fragment_hours">hora(s)</string>
    <string name="movie_detail_fragment_minutes">minuto(s)</string>

    <string name="movie_detail_view_model_log_tag">MovieDetailViewModel</string>
    <string name="movie_detail_view_model_log_reviews_message">Reviews: </string>
    <string name="movie_detail_view_model_log_error_message_review">Erro ao buscar comentários: </string>
    <string name="movie_detail_view_model_log_error_message_movie">Erro ao buscar filmes: </string>

    <string name="reviews_adapter_name_1">Alexandra</string>
    <string name="reviews_adapter_comments_1">It was great. This movie was a continuation of the Avengers of the Eternal War. See it first and then this movie</string>
    <string name="reviews_adapter_name_2">Jason</string>
    <string name="reviews_adapter_comments_2">The best hero is Iron Man. Not because of his clothes, but because of his personality</string>
    <string name="reviews_adapter_name_3">Amanda</string>
    <string name="reviews_adapter_comments_3">It was interesting. I think Loki and Stark and Captain America will die soon</string>

    <string name="content_description_button_back">botão voltar</string>
    <string name="content_description_logo_image">imagem logotipo move2you</string>
    <string name="content_description_poster_image_background">poster filme de detalhe</string>
    <string name="content_description_poster_image">poster filme frontal</string>
    <string name="content_description_title_text">titulo do filme</string>
    <string name="content_description_movie_runtime">tempo de duração do filme</string>
    <string name="content_description_genre_movie">genero filme</string>
    <string name="content_description_icon_star">icone estrela</string>
    <string name="content_description_vote_average_movie">Média de votos do filme</string>
    <string name="content_description_synopse_title_movie">"Sinopse "</string>
    <string name="content_description_synopse_movie">sinopse do filme</string>
    <string name="content_description_coments_title">Comentários</string>
    <string name="content_description_more_how_this_title">Mais Como Este</string>
    <string name="content_description_name_title">nome do autor do comentario</string>
    <string name="content_description_comments_movie">comentário do autor</string>
    <string name="content_description_now_playing">Em Exibição</string>
    <string name="content_description_comming_soon_title">Em Breve</string>
    <string name="content_description_more_popular_title">Mais Populares</string>
    <string name="content_description_top_rated_title">Melhores Avaliados</string>


</resources>