<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".ui.movie.detail.MovieDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/posterConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="375dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/posterImageView"
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:alpha="0.5"
                android:background="@drawable/rounded_corners_poster_image_view"
                android:contentDescription="@string/content_description_poster_image_background"
                android:scaleType="centerCrop"
                android:src="@drawable/big_bang_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="24dp"
            android:layout_height="28dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/content_description_button_back"
            android:src="@drawable/arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="21dp"
            android:layout_marginTop="56dp"
            android:text="@string/content_description_title_text"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/posterImageViewDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonBack" />

        <TextView
            android:id="@+id/durationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="21dp"
            android:layout_marginTop="2dp"
            android:text="@string/content_description_movie_runtime"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/posterImageViewDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <TextView
            android:id="@+id/genresTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="21dp"
            android:layout_marginTop="2dp"
            android:text="@string/content_description_genre_movie"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/posterImageViewDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/durationTextView" />

        <ImageView
            android:id="@+id/icStar"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/content_description_icon_star"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genresTextView" />

        <TextView
            android:id="@+id/ratingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:text="@string/content_description_vote_average_movie"
            android:textColor="@color/gray"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/icStar"
            app:layout_constraintTop_toBottomOf="@id/genresTextView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/posterImageViewDetail"
            android:layout_width="159dp"
            android:layout_height="200dp"
            android:layout_marginEnd="21dp"
            android:contentDescription="@string/content_description_poster_image"
            android:scaleType="centerCrop"
            android:src="@drawable/big_bang_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/ratingTextView"
            app:layout_constraintTop_toTopOf="@id/titleTextView"
            app:shapeAppearanceOverlay="@style/RoundedCorners" />

        <TextView
            android:id="@+id/synopsisLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="13dp"
            android:text="@string/content_description_synopse_title_movie"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/posterConstraintLayout" />

        <TextView
            android:id="@+id/synopsisTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/content_description_synopse_movie"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/synopsisLabelTextView" />

        <TextView
            android:id="@+id/commentsLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="18dp"
            android:text="@string/content_description_coments_title"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/synopsisTextView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewComments"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/rounded_corners_recycler_comments"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentsLabelTextView"
            tools:listitem="@layout/item_coments_detail" />

        <TextView
            android:id="@+id/nowPlayingTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_medium"
            android:gravity="start"
            android:text="@string/content_description_more_how_this_title"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewComments" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMoviesDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="19dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nowPlayingTextView"
            tools:listitem="@layout/item_movie" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
